--- a/.github/workflows/cherry_pick_v2.yml
+++ b/.github/workflows/cherry_pick_v2.yml
@@ -25,33 +25,63 @@ on:
         type: boolean
         default: true
         description: Allow backporting unmerged PRs (uses commits from PR directly)
+  pull_request_target:
+    types: [labeled]
 
 env:
   GH_TOKEN: ${{ secrets.YDBOT_TOKEN }}
 jobs:
   create-pr:
     runs-on: [self-hosted, tiny-worker]
+    # Run on workflow_dispatch or when backport label is added
+    if: |
+      github.event_name == 'workflow_dispatch' ||
+      (github.event_name == 'pull_request_target' && startsWith(github.event.label.name, 'backport/'))
     steps:
-      - name: checkout
+      - name: Extract backport branch from label
+        if: github.event_name == 'pull_request_target'
+        id: extract-label
+        shell: bash
+        run: |
+          LABEL_NAME="${{ github.event.label.name }}"
+          PR_NUMBER="${{ github.event.pull_request.number }}"
+          
+          # Extract branch name from label pattern backport/<branch>
+          if [[ "$LABEL_NAME" =~ ^backport/(.+)$ ]]; then
+            TARGET_BRANCH="${BASH_REMATCH[1]}"
+            echo "Found backport label: $LABEL_NAME -> branch: $TARGET_BRANCH"
+            echo "target_branches=$TARGET_BRANCH" >> $GITHUB_OUTPUT
+            echo "commits_and_prs=$PR_NUMBER" >> $GITHUB_OUTPUT
+            echo "should_run=true" >> $GITHUB_OUTPUT
+          else
+            echo "Label $LABEL_NAME does not match pattern backport/<branch>. Skipping."
+            echo "should_run=false" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 1
-          ref: ${{ inputs.script_version_sha }}
+          ref: ${{ inputs.script_version_sha || github.event.pull_request.base.sha || 'main' }}
           sparse-checkout: |
             .github
-      - name: install packages
+
+      - name: Install packages
         shell: bash
         run: |
           pip install PyGithub==2.5.0 requests
 
-      - name: configure
+      - name: Configure git
         shell: bash
         run: |
           git config --global user.name YDBot
           git config --global user.email ydbot@ydb.tech
           git config --local github.token ${{ env.GH_TOKEN }}
 
-      - name: run-command
+      - name: Run cherry-pick script
+        if: |
+          github.event_name == 'workflow_dispatch' ||
+          (github.event_name == 'pull_request_target' && steps.extract-label.outputs.should_run == 'true')
         shell: bash
         env:
           REPO: ${{ github.repository }}
@@ -60,7 +90,11 @@ jobs:
           GITHUB_ACTOR: ${{ github.actor }}
           GITHUB_RUN_ID: ${{ github.run_id }}
         run: |
+          COMMITS="${{ github.event_name == 'workflow_dispatch' && inputs.commits_and_prs || steps.extract-label.outputs.commits_and_prs }}"
+          TARGET_BRANCHES="${{ github.event_name == 'workflow_dispatch' && inputs.target_branches || steps.extract-label.outputs.target_branches }}"
+          ALLOW_UNMERGED="${{ github.event_name == 'workflow_dispatch' && inputs.allow_unmerged == true && '--allow-unmerged' || '' }}"
+          
           python3 ./.github/scripts/cherry_pick_v2.py \
-            --commits="${{ inputs.commits_and_prs }}" \
-            --target-branches="${{ inputs.target_branches }}" \
-            ${{ inputs.allow_unmerged == true && '--allow-unmerged' || '' }}
+            --commits="$COMMITS" \
+            --target-branches="$TARGET_BRANCHES" \
+            $ALLOW_UNMERGED
